--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,9 @@
 		"language" : "Language",
 		"reset":"Reset",
 		"findOut" : "Find Out",
-		"finded" : "Predicted as"
+		"finded" : "Predicted as",
+		"suggestion":"If not correct might be",
+		"draw" : "Draw",
+		"tamil" : "Tamil"
 	}
 }
