--- a/src/assets/i18n/ta.json
+++ b/src/assets/i18n/ta.json
@@ -4,6 +4,9 @@
 		"language" : "மொழி",
 		"reset":"அழி",
 		"findOut" : "கண்டுபிடி",
-		"finded" : "கணிப்பு"
+		"finded" : "கணிப்பு",
+		"suggestion":"இதர கணிப்புகள்",
+		"draw" : "வரை",
+		"tamil" : "தமிழ்"
 	}
 }
